--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -20,3 +20,8 @@ tasks:
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" |sudo tee  /etc/apt/sources.list.d/pgdg.list
       sudo apt update
       sudo apt install -y postgresql-client-13 libpq-dev
+
+  - name: Install React dependencies
+    init: |
+      cd frontend-react-js
+      npm install
