--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -30,5 +30,6 @@ tasks:
   - name: Install Python dependencies
     init: |
       cd backend-flask
+      pip install --upgrade pip
       pip install -r requirements.txt
       cd ..
