--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,8 @@ services:
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       # REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID: ""
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "eu-west-2_R7pUwWoPR"
-      REACT_APP_CLIENT_ID: "537sv4gv898hm7qso1bsgkg9c9"
+      REACT_APP_AWS_USER_POOLS_ID: "${REACT_APP_AWS_USER_POOLS_ID}"
+      REACT_APP_CLIENT_ID: "${REACT_APP_CLIENT_ID}"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
